# Hum-skipping-YT

./: .gitignore  README.md  pyproject.toml
examples/conference_sample/: output.json
src/: generate_segment.py  main.py  reduce_audio_test.py  remove_hums_from_audio.py  timeline_utils.py
src/client/: script.js  tampermonkey.js
src/server/: config.py  fake_youtube_cookies.txt  main.py  requirements.txt  run.sh  video_utils.py
src/server/services/: humaware_classifictation.py  segment_audio_humaware.py  timeline_utils.py  wav_classifier.py  youtube_and_audio_utils.py
src/server/unused/: reduce_audio_test.py
src/test/: audio_file_classification.py
